# isdigits

./: CMakeLists.txt  OLDCMakeLists.txt
src/: isdigits.cpp
